--- a/Stylesheet/producao.css
+++ b/Stylesheet/producao.css
@@ -14,42 +14,27 @@ header {
     text-align: center;
 }
 
-
 nav {
     display: flex;
     flex-direction: column;
     align-items: center;
-    text-align: center;
-}
-
-
-.logo {
-    padding: 0 0 10px 0;
-    width: 12.5em;
-    height: 12.5em;
-    text-align: center;
 }
 
 .logo2 {
-    padding: 20px 0 20px 0;
-    width: 10%;
+    margin: 20px 0 20px 0;
+    width: 11%;
     height: auto;
-    text-align: center;
 }
 
-
 nav ul {
-    list-style: none;
     display: flex;
     justify-content: flex-end;
     margin: 0;
 }
 
-
 nav li {
     margin: 0.5em 0;
 }
-
 
 nav a {
     text-transform: uppercase;
@@ -60,12 +45,10 @@ nav a {
     padding: 0 20px;
 }
 
-
 nav a:hover {
     color: #D2691E;
     text-decoration: underline;
 }
-
 
 .caixa {
     position: relative;
@@ -73,7 +56,7 @@ nav a:hover {
     margin: 0 auto;
 }
 
-/*-----------------------------------------------------Conteudo Principal--------------------------------------------------------*/
+/*-----------------------------------------------------Páginas de Conteúdo--------------------------------------------------------*/
 main {
     width: 100%;
     min-height: 110vh;
@@ -89,12 +72,11 @@ main {
 /*define o tamanho que o conteudo de todas as páginas irão ocupar, o display: none foi usado para ocultar as páginas*/
 .conteudo {
     display: none;
-    min-height: calc(100% - 320px);
     margin-top: 20px;
     position: relative;
 }
 
-/*titulo principal que aparece em tiodas as páginas do conteúdo do site*/
+/*titulo principal que aparece em todas as páginas do conteúdo do site*/
 #titulo-conteudo {
     font-family: 'Libre Baskerville', sans-serif;
     font-weight: bold;
@@ -114,48 +96,12 @@ h4 {
     font-size: 22px;
 }
 
-/*imagem da página produção*/
+/*imagens que ficam ao lado direito das páginas*/
 .imagem-producao {
     max-width: 90%;
     height: auto;
     float: right;
 }
-
-/*frase que aparece antes de que clicar o select*/
-#titulo,
-#titulo2 {
-    text-align: center;
-    margin-top: 3em;
-    font-size: 3em;
-    color: #9C4931;
-    font-weight: bold;
-}
-
-strong {
-    color: #D3543F;
-}
-
-
-/*Parágrafos de saída*/
-#outResultado,
-#outMenorMedia,
-#outMenorProd,
-#outMaiorProd,
-#outFiltro,
-label,
-p {
-    padding: 40px 20px 20px 20px;
-    line-height: 1.7em;
-    font-size: 19px;
-}
-
-#outMenorProd,
-#outMaiorProd,
-#outMenorMedia {
-    color: #D3543F;
-    font-size: 23px;
-}
-
 
 /* select */
 #sltSafra {
@@ -170,19 +116,46 @@ select {
     border-radius: 4px;
     background-color: #933f1e;
     color: white;
-    transition: transform 0.2s;
 }
 
 select:hover {
     cursor: pointer;
     transform: scale(1.05);
+    transition: transform 0.3s;
 }
 
-/*Botão dos parágrafos de saída */
-#btMostrar,
-#btMenorProd,
-#btMaiorProd,
-#btPesquisar {
+/*frases que aparecem antes de clicar o select*/
+#titulo,
+#titulo2 {
+    text-align: center;
+    margin-top: 3em;
+    font-size: 3em;
+    color: #9C4931;
+    font-weight: bold;
+}
+
+strong {
+    color: #D3543F;
+}
+
+/*Parágrafos de saída*/
+.paragrafoSaida,
+label,
+main p {
+    padding: 40px 20px 20px 20px;
+    line-height: 1.7em;
+    font-size: 19px;
+}
+
+#outMenorProd,
+#outMaiorProd,
+#outMenorMedia {
+    color: #D3543F;
+    font-size: 23px;
+}
+
+/*Botões dos parágrafos de saída */
+.button {
     margin-left: 10px;
     padding: 8px 10px;
     font-size: 13px;
@@ -195,24 +168,17 @@ select:hover {
     font-family: Verdana, Tahoma, sans-serif;
 }
 
-#btMostrar:hover,
-#btMenorProd:hover,
-#btMaiorProd:hover,
-#btPesquisar:hover {
+.button:hover {
     cursor: pointer;
     transform: scale(1.05);
     transition: 0.2s all;
     background: #f8844a;
 }
 
-#btMostrar:active,
-#btMenorProd:active,
-#btMaiorProd:active,
-#btPesquisar:active {
+.button:active {
     transition: 0.2s all;
     background: #fd9a69;
 }
-
 
 /*caixinha do input de busca*/
 #inMedia,
@@ -226,8 +192,41 @@ select:hover {
     color: #333;
 }
 
+/*Tabela da página de produção*/
+#tabela {
+    width: 90%;
+    align-items: center;
+    margin: 50px 0 0 20px;
+    table-layout: fixed;
+}
 
-/*Imagens da lavouras*/
+.tabela {
+    width: 60%;
+    align-items: center;
+    margin: 60px 0 0 20px;
+    table-layout: fixed;
+}
+
+th, td {
+    padding: 8px 15px;
+    text-align: center;
+    border: 5px double black;
+}
+
+th {
+    background-color: #c0633a;
+    font-weight: bold;
+}
+
+tr {
+    background-color: #f5deb3;
+}
+
+tr:hover {
+    background-color: #de9967;
+}
+
+/*slide de imagens da página "Maior produtividade"*/
 .slide-imagens {
     position: absolute;
     border-radius: 20px;
@@ -284,52 +283,21 @@ select:hover {
     }
 }
 
-@media (max-width: 768px) {
-    .imagem-slide {
-        position: absolute;
-        top: 0;
-        left: 0;
-    }
-}
-
-
-#tabela {
-    width: 60%;
-    align-items: center;
-    margin: 50px 0 0 100px;
-    table-layout: fixed;
-}
-
-#tabela th,
-#tabela td {
-    padding: 8px 15px;
-    text-align: center;
-    border: 5px double black;
-}
-
-#tabela th {
-    background-color: #c0633a;
-    font-weight: bold;
-}
-
-#tabela tr {
-    background-color: #f5deb3;
-}
-
-#tabela tr:hover {
-    background-color: #de9967;
-}
-
-
-
-/*------------------------------------------------footer-------------------------------------------------------------------------*/
+/*--------------------------------------------------------footer-------------------------------------------------------------------------*/
 footer {
     text-align: center;
     background-color: #015641;
     padding: 10px 0;
 }
 
+.logo {
+    padding: 0 0 10px 0;
+    height: 12.5em;
+    text-align: center;
+}
+
 .copyright {
     color: #FFFFFF;
     font-size: 13px;
+    padding-bottom: 15px;
 }
