--- a/Stylesheet/style-producao.css
+++ b/Stylesheet/style-producao.css
@@ -69,7 +69,7 @@ main {
     padding: 10px;
 }
 
-/*define o tamanho que o conteudo de todas as páginas irão ocupar, o display: none foi usado para ocultar as páginas*/
+/*O display: none foi usado para ocultar as páginas*/
 .conteudo {
     display: none;
     position: relative;
@@ -224,15 +224,13 @@ tr:hover {
 
 /*slide de imagens da página "Maior produtividade"*/
 .slide-imagens {
-    position: absolute;
+    position: absolute; /*Posição absoluta em relação á classe "conteudo"*/
     border-radius: 20px;
-    width: 500px;
-    height: 300px;
-    overflow: hidden;
+    width: 500px; 
+    height: 300px; 
+    overflow: hidden; /*é utilizada para esconder qualquer conteúdo que ultrapasse os limites do slide.*/
     position: absolute;
-    top: 70%;
-    right: 8%;
-    transform: translateY(-50%);
+    transform: translate(170%, -10%);   /*define a posição que o slide irá ocupar*/
 }
 
 .imagens-lavoura {
@@ -246,13 +244,12 @@ tr:hover {
     width: 100%;
     height: 100%;
     flex-shrink: 0;
-    position: relative;
 }
 
 .slide img {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: cover; /*Foi usado para que as imagens ocupem todo o espaço disponivel, mas sem perder a proporção*/
 }
 
 @keyframes slide-animation {
