Adicionei alguns comentários

--- a/Stylesheet/style-producao.css
+++ b/Stylesheet/style-producao.css
@@ -1,3 +1,13 @@
+/*Descrição: Esta aplicação gerencia a produtividade de áreas de produção de café em uma fazenda ao longo de 10 safras. Com um filtro de safra, o usuário pode visualizar informações em uma tabela sobre as áreas e suas produções em cada safra. Além disso, é possível identificar as áreas com maior e menor produtividade na safra. A aplicação também permite que o usuário insira um valor para ver quais áreas tiveram a produção média menor que esse valor informado. Por fim, há um filtro de busca para exibir informações específicas da área pesquisada em todas as safras.
+
+Tema: Gerenciamento das Áreas de Produção de uma Fazenda de Café
+
+Versão: 1.0
+
+Período de desenvolvimento: 21/06/2023 a 24/07/2023
+
+Autores: Davi dos Reis, Franklin Gonçalves de Andrade, Katiane Maciel do Nascimento, Rafael Capeletti Moráo e Nicolly Cerqueira Lopes Rozado*/
+
 @import url('https://fonts.googleapis.com/css2?family=Arvo:ital,wght@0,400;0,700;1,400;1,700&family=EB+Garamond:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&family=Libre+Baskerville:ital@1&family=Montserrat:ital,wght@0,100;0,200;1,100&display=swap');
 
 @import url('https://fonts.googleapis.com/css2?família=Arvo:ital,wght@0,400;0,700;1,400;1,700&family=EB+Garamond:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&family=Montserrat:ital,wght@0,100;0,200;1,100&display=swap');
@@ -50,11 +60,6 @@ nav a:hover {
     cursor: pointer;
 }
 
-.caixa {
-    position: relative;
-    width: 100%;
-    margin: 0 auto;
-}
 
 /*-----------------------------------------------------Páginas de Conteúdo--------------------------------------------------------*/
 main {
@@ -69,9 +74,8 @@ main {
     padding: 10px;
 }
 
-/*O display: none foi usado para ocultar as páginas*/
 .conteudo {
-    display: none;
+    display: none; /*O display: none foi usado para ocultar as divs das páginas de conteúdo*/
     position: relative;
 }
 
