--- a/Stylesheet/style-home.css
+++ b/Stylesheet/style-home.css
@@ -1,3 +1,13 @@
+/*Descrição: Esta aplicação gerencia a produtividade de áreas de produção de café em uma fazenda ao longo de 10 safras. Com um filtro de safra, o usuário pode visualizar informações em uma tabela sobre as áreas e suas produções em cada safra. Além disso, é possível identificar as áreas com maior e menor produtividade na safra. A aplicação também permite que o usuário insira um valor para ver quais áreas tiveram a produção média menor que esse valor informado. Por fim, há um filtro de busca para exibir informações específicas da área pesquisada em todas as safras.
+
+Tema: Gerenciamento das Áras de Produção de uma Fazenda de Café
+
+Versão: 1.0
+
+Período de desenvolvimento: 21/06/2023 a 24/07/2023
+
+Autores: Davi dos Reis, Franklin Gonçalves de Andrade, Katiane Maciel do Nascimento, Rafael Capeletti Moráo e Nicolly Cerqueira Lopes Rozado*/
+
 @import url('https://fonts.googleapis.com/css2?family=Arvo:ital,wght@0,400;0,700;1,400;1,700&family=EB+Garamond:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&family=Libre+Baskerville:ital@1&family=Montserrat:ital,wght@0,100;0,200;1,100&display=swap');
 
 @import url('https://fonts.googleapis.com/css2?família=Arvo:ital,wght@0,400;0,700;1,400;1,700&family=EB+Garamond:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&family=Montserrat:ital,wght@0,100;0,200;1,100&display=swap');
@@ -93,7 +103,6 @@ main {
   top: 40%;
   left: 50%;
   transform: translate(-50%, -50%);
-  /*Foi usado para centralizar o titulo em relação a imagem principal. Ela alinha elementos vertical e horizontalmente no centro da tela. Dentro do sistema de coordenadas do CSS, os valores negativos movem o elemento na direção oposta à que eles normalmente se moveriam (é como se fosse um plano cartesiano).*/
   color: #fff;
   font-size: 3.6em;
   font-weight: bold;
@@ -155,7 +164,7 @@ main {
   height: 650px;
   object-fit: cover;
   /*Ajusta a imagem para a largura de 600px e altura de 650px*/
-  position: relative;
+  position: relative; 
   transform: translate(50%);
   z-index: 1;
   top: 100px;
@@ -187,7 +196,7 @@ main {
   height: 1100px;
 }
 
-/*Animação das palvras "Arábica" e "conilon"*/
+/*Animação das palavras "Arábica" e "conilon"*/
 .animacao-letras {
   display: flex;
   align-items: center;
@@ -220,18 +229,16 @@ main {
 .cafes {
   text-align: center;
   margin: 0 auto;
+  margin-bottom: 80px; 
 }
 
 .tipo-graos {
   display: inline-block;
-  text-align: center;
-  margin: 10px;
-  padding-bottom: 100px;
+  margin: 20px;
 }
 
 .imagem-texto {
   position: relative;
-  display: inline-block;
 }
 
 .texto-graos {
@@ -260,7 +267,6 @@ main {
 
 .imagem-texto:hover .texto-graos {
   cursor: pointer;
-  visibility: visible;
   opacity: 1;
   border-radius: 30px;
 }
@@ -292,10 +298,6 @@ main {
   opacity: 1;
 }
 
-.valores:hover {
-  opacity: 0.8;
-}
-
 .valores:hover p {
   animation-name: fade-in;
   animation-duration: 1s;
@@ -320,7 +322,7 @@ main {
   display: flex;
   height: 15rem;
   gap: 1rem;
-  padding: 20px 200px;
+  padding: 20px 190px;
 }
 
 .galeria-imagens>div {
@@ -329,11 +331,11 @@ main {
   background-position: center;
   background-repeat: no-repeat;
   background-size: auto 100%;
-  transition: all .8s cubic-bezier(.25, .4, .45, 1.4);
+  transition: all 0.8s cubic-bezier(0.25, 0.4, 0.45, 1.4);
 }
 
 .galeria-imagens>div:hover {
-  flex: 5;
+  flex: 3;
 }
 
 /*------------------------------------------------------------------footer-----------------------------------------------------------------*/
