--- a/Stylesheet/style-novidades.css
+++ b/Stylesheet/style-novidades.css
@@ -1,3 +1,13 @@
+/*Descrição: Esta aplicação gerencia a produtividade de áreas de produção de café em uma fazenda ao longo de 10 safras. Com um filtro de safra, o usuário pode visualizar informações em uma tabela sobre as áreas e suas produções em cada safra. Além disso, é possível identificar as áreas com maior e menor produtividade na safra. A aplicação também permite que o usuário insira um valor para ver quais áreas tiveram a produção média menor que esse valor informado. Por fim, há um filtro de busca para exibir informações específicas da área pesquisada em todas as safras.
+
+Tema: Gerenciamento das Áreas de Produção de uma Fazenda de Café
+
+Versão: 1.0
+
+Período de desenvolvimento: 21/06/2023 a 24/07/2023
+
+Autores: Davi dos Reis, Franklin Gonçalves de Andrade, Katiane Maciel do Nascimento, Rafael Capeletti Moráo e Nicolly Cerqueira Lopes Rozado*/
+
 @import url('https://fonts.googleapis.com/css2?family=Arvo:ital,wght@0,400;0,700;1,400;1,700&family=EB+Garamond:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&family=Libre+Baskerville:ital@1&family=Montserrat:ital,wght@0,100;0,200;1,100&display=swap');
 
 @import url('https://fonts.googleapis.com/css2?família=Arvo:ital,wght@0,400;0,700;1,400;1,700&family=EB+Garamond:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&family=Montserrat:ital,wght@0,100;0,200;1,100&display=swap');
@@ -75,8 +85,9 @@ nav a:hover {
 
 /* --------------------------------------------------main------------------------------------------------------------------------*/
 main {
-  background: url(../Imagens-Novidades/sacas.png) fixed center/cover no-repeat;
-
+  background: url(../Imagens-Novidades/sacas.png) fixed no-repeat;
+  background-position: center; 
+  background-size: cover;    
 }
 
 .imagem-lavoura {
@@ -139,10 +150,9 @@ hr {
   padding: 10px 80px;
   opacity: 0.9;
   border-radius: 5px;
-  border-radius: bottom 100px;
   text-align: center;
   width: 65%;
-  margin: auto;
+  margin: 0 auto;
   line-height: 2;
 }
 
